gccida/g0/dead_or_set_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_p/src/rtlanal.c:2183:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_p/src/rtlanal.c:2184:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_p/src/obj/rtlanal.o] Error 1
